// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="RadioButton"
>
  <input
    aria-label="radio-button"
    class="ControlledInput"
    data-test-id="cf-ui-radio-button"
    type="radio"
    value=""
  />
  <label
    class="Input__ghost RadioButton__ghost"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="RadioButton my-extra-class"
>
  <input
    aria-label="radio-button"
    class="ControlledInput"
    data-test-id="cf-ui-radio-button"
    type="radio"
    value=""
  />
  <label
    class="Input__ghost RadioButton__ghost"
  />
</div>
`;
